# Dev_ACM

./: CMakeLists.txt  CMakeSettings_linux.json  CMakeSettings_win.json  MyLocalImports.cmake
CommonLib/: CMakeLists.txt  acmCommSeqThread.h  acmCommSeqThread_01_LowPowerThresh_pct.cpp  acmCommSeqThread_02_LowPowerAlarmEnable.cpp  acmCommSeqThread_03_HighPowerThresh_pct .cpp  acmCommSeqThread_03_HighPowerThresh_pct.cpp  acmCommSeqThread_04_HighPowerAlarmEnable.cpp  acmCommSeqThread_05_VSWRTrigger.cpp  acmCommSeqThread_06_VSWRAlarmEnable.cpp  acmCommSeqThread_07_Gain.cpp  acmCommSeqThread_08_LatchAlarmEnable.cpp  acmCommSeqThread_09_PowerUpAlarmEnable.cpp  acmCommSeqThread_10_RelayOnAlarmEnable.cpp  acmCommSeqThread_10_RelayOnPowerEnable.cpp  acmCommSeqThread_11_RelayOnVSWREnable.cpp  acmCommSeqThread_11_VSWROnZeroEnable.cpp  acmCommSeqThread_12_PTTDelay_sec.cpp  acmCommSeqThread_13_PTTAlarmEnable.cpp  acmCommSeqThread_14_ClearAlarms.cpp  acmCommSeqThread_acquire.cpp  acmCommSeqThread_process.cpp  acmCommSeqThread_send.cpp  acmCommSeqThread_settings.cpp  acmCommSeqThread_thread.cpp  acmCommSeqThread_timer.cpp  acmCommSeqThread_txrx.cpp  cmnProgramParms.cpp  cmnProgramParms.h
ShareLibACM/: CMakeLists.txt  SuperStateACM.cpp  SuperStateACM.h  SuperStateDefs.cpp  SuperStateDefs.h  SuperStateExtraACM.cpp  SuperStateExtraACM.h  SuperWantsACM.cpp  SuperWantsACM.h  acmSuperDefs.cpp  acmSuperDefs.h  acmSuperSettingsACM.cpp  acmSuperSettingsACM.h  acmSuperSettingsACM_class.cpp  acmSuperSettingsACM_update.cpp  acmSuperStateACM.cpp  acmSuperStateACM.h  smShare.h  smShare_class.cpp  smShare_set.cpp
ShareLibACMPhpExt/: CMakeLists.txt  MainInit.cpp  ShareLibPhpExt.cpp  phpShare.h  phpShare_aux.cpp  phpShare_event.cpp  phpShare_gaincalc.cpp  phpShare_settings.cpp  phpShare_state.cpp  phpShare_super.cpp  phpShare_test.cpp  phpShare_time.cpp
Test/: CMakeLists.txt  CmdLineExec.cpp
acmproc/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp
commtest/: CMakeLists.txt  MainInit.cpp  acomCommParms.cpp  acomCommParms.h  acomTestSeqThread_test.cpp
